--- a/4-ml.tex
+++ b/4-ml.tex
@@ -100,7 +100,7 @@ The first term of the above-written sum corresponds to a bias error, because it 
     \caption{On the left, theoretical relation between the bias, variance and total errors and the model complexity. The overfit case is illustrated on the right plot when considering polynomial fits. The lower degree linear function is more generalizable than the biased high degree polynomial that fits perfectly the data.}\label{fgr:bias_variance}
 \end{figure}
 
-In general, if the model is very complex in comparison to the amount of data we have, we would fit too closely to the data and have a very high change to overfit. The opposite is also true, a simplistic model would yield to a poor bias error and the model would be underfit. This principle is represented on the Figure~\ref{fgr:bias_variance} and should guide us in the design of a new ML model.
+In general, if the model is very complex in comparison to the amount of data we have, we would fit too closely to the data and have a very high change to overfit. The opposite is also true, a simplistic model would yield to a poor bias error and the model would be underfit. This principle is represented on Figure~\ref{fgr:bias_variance} and should guide us in the design of a new ML model.
 The complex art of fitting a model to a dataset consists in finding the right balance between the bias and the variance. Fortunately, some optimization tools can help us reduce the variance error by changing the loss function itself, and I will introduce them in the next part of our discussion.
 
 \subsubsection{Regularization to fight against overfitting}
@@ -122,7 +122,7 @@ and $y_i$ is now a scalar in a regression problem ($\mathcal{Y}=\mathbb{R}$). On
 \begin{equation}\label{eq:L2_reg}
   \mathcal{R}_n(f) = \frac{1}{n}\sum_{i=1}^n \mathcal{L}\left(f(\mathbf{x}_i),y_i\right) + \lambda_2 {\lVert \boldsymbol{\beta} \rVert}_2^2 = \frac{1}{n}\sum_{i=1}^n {\left(\boldsymbol{\beta}\mathbf{x}_i\ex{T}-y_i\right)}^2 + \lambda_2 \sum_{k=1}^p \left|\beta^{(k)}\right|^2
 \end{equation}
-where $\lambda_2$ is the parameter of the L2-regularization, it controls the importance of the regularization term in the optimization process. This parameter controls the complexity of the model and needs to be tweaked to find the optimum between accuracy and generalizability as shown on the Figure~\ref{fgr:bias_variance}. If we now consider a polynomial function, the vector $\mathbf{x}_i$ represents the vector of different exponentiations of a scalar $x_i$ so that $\mathbf{x}_i=\left(x_i^0,\ldots,x_i^{n-1}\right)$, and the coefficients $\boldsymbol{\beta}$ are just the polynomial coefficients of the polynomial function $f$. This is a clear illustration of how the complexity of the model is penalized since regularization terms directly penalize the number of terms used and their influence on the fitting process.
+where $\lambda_2$ is the parameter of the L2-regularization, it controls the importance of the regularization term in the optimization process. This parameter controls the complexity of the model and needs to be tweaked to find the optimum between accuracy and generalizability as shown on Figure~\ref{fgr:bias_variance}. If we now consider a polynomial function, the vector $\mathbf{x}_i$ represents the vector of different exponentiations of a scalar $x_i$ so that $\mathbf{x}_i=\left(x_i^0,\ldots,x_i^{n-1}\right)$, and the coefficients $\boldsymbol{\beta}$ are just the polynomial coefficients of the polynomial function $f$. This is a clear illustration of how the complexity of the model is penalized since regularization terms directly penalize the number of terms used and their influence on the fitting process.
 Note that this regularization can be adapted to other types of models, given that we manage to define a L2-norm of the prediction function $f$.
 
 A second very common regularization term is based on the L1-norm of the prediction function. A L1-regularized least square linear regression is called a LASSO (Least Absolute Shrinkage and Selection Operator) regression, it allows for a sparser selection of the model weights by allowing zero weights in the model, which is not the case for a L2-regularization. The risk function associated with this regression model can be expressed as:
@@ -145,7 +145,7 @@ I previously introduced the theory behind the bias--variance tradeoff, which boi
 
 The main property of the test set is that it is a completely unsee dataset, which means that the training of the model should be independent of this set except for the very final evaluation. But in some cases, we want to compare different models with each other or change a ``hyperparameter'' like the regularization parameter within the same model architecture. To evaluate these models, we cannot evaluate for every model the generalization error on the test set, because it would compromise the independence of the test set with the training process. Hence, we introduce validation sets within the initial training set. We could do a simple training/validation split similar to the train/test split. However it would weaken the model even more since there is less data available, and, furthermore, it does not use all the potential of the training set. A very common technique to test the performance of a model on a training set is the cross-validation. The idea is to use different training/validation splits to test the model in multiple configurations to have a better evaluation of the model performance by averaging the different performances. 
 
-The most used method is the k-fold cross-validation technique which consists in partitioning the training set $\mathcal{D}\ex{train}$ in k equal size subsets $\mathcal{S}_1,...,\mathcal{S}_k$. The model is then trained on the union $\bigcup_{l\neq m} \mathcal{S}_l$ of all subsets but one subset $\mathcal{S}_m$ that will be used as a validation set for all $m\in \{1,\ldots,k\}$. The principle of the k-fold approach is illustrated on the Figure~\ref{fgr:kfold}. The approximate generalization error of the model is then the average of every loss calculated on the validation subsets. This tool provides a way of comparing different models without using the test set, which is extremely useful especially in the parameterization of the ML model.
+The most used method is the k-fold cross-validation technique which consists in partitioning the training set $\mathcal{D}\ex{train}$ in k equal size subsets $\mathcal{S}_1,...,\mathcal{S}_k$. The model is then trained on the union $\bigcup_{l\neq m} \mathcal{S}_l$ of all subsets but one subset $\mathcal{S}_m$ that will be used as a validation set for all $m\in \{1,\ldots,k\}$. The principle of the k-fold approach is illustrated on Figure~\ref{fgr:kfold}. The approximate generalization error of the model is then the average of every loss calculated on the validation subsets. This tool provides a way of comparing different models without using the test set, which is extremely useful especially in the parameterization of the ML model.
 
 \begin{figure}[ht]
   \centering
@@ -349,7 +349,7 @@ To better quantify the change of selectivity, it could be interesting to give st
 
 %% 900K gaps
 As explained in the previous chapter, Boltzmann averaging at higher temperature gave better result in describing the ambient-pressure selectivity description. 
-This new type of descriptor is very interesting since it better performs around the high selectivity region, where the standard Boltzmann average at \SI{298}{\kelvin} loses its accuracy (see Figure~\ref{fgr:H_900K}). I used this descriptor to build several descriptors presented in the Table~\ref{tab:energy_descriptors}. As shown on the Figure~\ref{fgr:featimp_shap}, the exchange Gibbs free energy at \SI{900}{\kelvin} and the excess of free energy compared to the \SI{298}{\kelvin} case are the second and third most influential descriptors of our ML model. They are complementary to the exchange Gibbs free energy at \SI{298}{\kelvin} to predict the selectivity at higher pressures.
+This new type of descriptor is very interesting since it better performs around the high selectivity region, where the standard Boltzmann average at \SI{298}{\kelvin} loses its accuracy (see Figure~\ref{fgr:H_900K}). I used this descriptor to build several descriptors presented in the Table~\ref{tab:energy_descriptors}. As shown on Figure~\ref{fgr:featimp_shap}, the exchange Gibbs free energy at \SI{900}{\kelvin} and the excess of free energy compared to the \SI{298}{\kelvin} case are the second and third most influential descriptors of our ML model. They are complementary to the exchange Gibbs free energy at \SI{298}{\kelvin} to predict the selectivity at higher pressures.
 
 %% conclusion
 By combining the above-mentioned features with more standard geometrical descriptors, I trained an ML model for the ambient pressure selectivity that identifies the origins of the selectivity drop and gives promising prediction results.
@@ -518,7 +518,7 @@ I defined a set of {80\%} randomly chosen structures out of the final dataset to
     \caption{ Root mean squared errors on the same test set (20\% of all data) as a function of the fraction of the training set used to train smaller models. The error decreases as the amount of data increases. }\label{fgr:training_curve}
   \end{figure}
 
-To see if it would be possible to train a better model with more training data, we train different models with different fractions of the training set as shown on the Figure~\ref{fgr:training_curve}. The RMSE unsurprisingly decreases as we increase the amount of data, but it seems to start stabilizing for a fraction of 95\% of the training set. This means that the model has good the amount of training data to achieve what it seems to be the minimum error on this test set.
+To see if it would be possible to train a better model with more training data, we train different models with different fractions of the training set as shown on Figure~\ref{fgr:training_curve}. The RMSE unsurprisingly decreases as we increase the amount of data, but it seems to start stabilizing for a fraction of 95\% of the training set. This means that the model has good the amount of training data to achieve what it seems to be the minimum error on this test set.
 
 \begin{figure}[ht]
   \centering
