--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -33,7 +33,7 @@ In the end of the thesis, I will be studying the different approaches: layer-by-
 
 To test the relevance of the diffusion coefficient calculated by these methods, we need to be able to compare with experimental data. However, it is hard to directly access the diffusion coefficient inside a nanoporous material. The kinetic performance can only be glimpsed by analyzing the shape of the experimental breakthrough curves. If we can generate these breakthrough curves using diffusion coefficients as input, it could be possible to confirm or invalidate the results of our calculations.
 
-A breakthrough curve can be broken down into three different zones: an unsaturated zone, a mass transfer zone and a saturated zone as shown on the Figure~\ref{fgr:breakthrough_zones}. Sharma et al. developed a tool to generate breakthrough curves based on adsorption quantities taken from a isotherm fit, and mass transfer properties such as the self-diffusion coefficient and material surface diffusion (Knudsen diffusion).\autocite{Sharma_2023} This tool can potentially be used to generate breakthrough curves and compare it to experimental curves. If the isotherm fitting properties come from experimental calculation, then the only variable can only be the mass transfer term. In this case, this tool can be used a qualitative way of validating a calculated self-diffusion coefficient value.
+A breakthrough curve can be broken down into three different zones: an unsaturated zone, a mass transfer zone and a saturated zone as shown on Figure~\ref{fgr:breakthrough_zones}. Sharma et al. developed a tool to generate breakthrough curves based on adsorption quantities taken from a isotherm fit, and mass transfer properties such as the self-diffusion coefficient and material surface diffusion (Knudsen diffusion).\autocite{Sharma_2023} This tool can potentially be used to generate breakthrough curves and compare it to experimental curves. If the isotherm fitting properties come from experimental calculation, then the only variable can only be the mass transfer term. In this case, this tool can be used a qualitative way of validating a calculated self-diffusion coefficient value.
 
 \begin{figure}[ht]
   \centering
@@ -63,7 +63,7 @@ In order to incorporate flexibility effects in the screening procedure at a mini
 
 \subsubsection{Methodology}
 
-To model the dynamics of the framework, Witman et al.\ use the UFF forcefield to describe the non-electrostatic framework bond potentials except for the metal bonding. For the bond dynamics around the metal, a harmonic equilibrium is fixed around the values extracted from the experimental structure. For this reason, this forcefield definition is referred to as the UFF-fix-metal (UFF-FM). In addition of the Lennard-Jones description, the point charge Coulomb interactions are described using the standard Ewald summation technique based on the charges calculated by the density derived electrostatic and chemical (DDEC) method.\autocite{manz2010chemically} Using this forcefield, the authors carried out a systematic snapshot generation of the structures from the CoRE MOF 2014 database with pre-calculated DDEC charges. And these snapshots were used to determine flexible Xe and Kr Henry constant values as well as the infinite dilution Xe/Kr selectivity. The flexible selectivity was found to be lower for {95\%} of the materials with a rigid selectivity over $25$ (as shown on the Figure~\ref{fgr:underestimated_rigid}), which suggests an overestimation of the top performing materials. Furthermore, the effect of flexibility is much more important for the smaller pore sizes, because of the intensity of the interactions at lower distance. 
+To model the dynamics of the framework, Witman et al.\ use the UFF forcefield to describe the non-electrostatic framework bond potentials except for the metal bonding. For the bond dynamics around the metal, a harmonic equilibrium is fixed around the values extracted from the experimental structure. For this reason, this forcefield definition is referred to as the UFF-fix-metal (UFF-FM). In addition of the Lennard-Jones description, the point charge Coulomb interactions are described using the standard Ewald summation technique based on the charges calculated by the density derived electrostatic and chemical (DDEC) method.\autocite{manz2010chemically} Using this forcefield, the authors carried out a systematic snapshot generation of the structures from the CoRE MOF 2014 database with pre-calculated DDEC charges. And these snapshots were used to determine flexible Xe and Kr Henry constant values as well as the infinite dilution Xe/Kr selectivity. The flexible selectivity was found to be lower for {95\%} of the materials with a rigid selectivity over $25$ (as shown on Figure~\ref{fgr:underestimated_rigid}), which suggests an overestimation of the top performing materials. Furthermore, the effect of flexibility is much more important for the smaller pore sizes, because of the intensity of the interactions at lower distance. 
 
 \begin{figure}[ht]
   \centering
@@ -118,7 +118,7 @@ This approach does not give a complete picture of the flexibility effect on the 
 
 According to original paper on SBMOF-1,\autocite{Banerjee_2016} the theoretical selectivity calculated by UFF is around $70.6$. However, the experimental selectivity is much lower, around $16$. To solve this mystery, Witman et al. used a snapshot-based method to evaluate the effect of selectivity. The intrinsic flexibility lowers the selectivity, which goes in the right direction to explain the difference of selectivity, but it does not seem to capture the whole picture. 
 
-I think that the missing effect that could explain the discrepancies observed is the deformation induced by the loading of adsorbate inside the material. For instance, experimentally a structure is never empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown on the Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: KAXQOR and KAXQIL. The first one is loaded by either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand, is loaded by water that forms big clusters inside the pores and therefore stretches the pore size toward higher values (high LCD values around \SI{5.0}{\angstrom}). If we look at the structures resolved in the Nature Communications study\autocite{Banerjee_2016}, depending on the adsorbate (hexane, water, butane, krypton or xenon), the LCD and PLD values change in the first order according to the size of the adsorbate as illustrated on the Figure~\ref{fgr:stretch}. There are, of course, other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
+I think that the missing effect that could explain the discrepancies observed is the deformation induced by the loading of adsorbate inside the material. For instance, experimentally a structure is never empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown on the Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: KAXQOR and KAXQIL. The first one is loaded by either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand, is loaded by water that forms big clusters inside the pores and therefore stretches the pore size toward higher values (high LCD values around \SI{5.0}{\angstrom}). If we look at the structures resolved in the Nature Communications study\autocite{Banerjee_2016}, depending on the adsorbate (hexane, water, butane, krypton or xenon), the LCD and PLD values change in the first order according to the size of the adsorbate as illustrated on Figure~\ref{fgr:stretch}. There are, of course, other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
 
 \begin{table}[t]
 \centering
@@ -148,7 +148,7 @@ I think that the missing effect that could explain the discrepancies observed is
   \label{table:sbmof}
 \end{table}
 
-As shown on the Figure~\ref{fgr:ads_config}, the orientation of the hexane molecule inside the material seems to favor either a configuration with a large LCD and a low PLD (QUXRUY), or a slightly lower LCD with a slightly higher PLD (QUXRIM). The material configurations are, however, a bit different from the ones observed with KXQOR or KAXQIL. 
+As shown on Figure~\ref{fgr:ads_config}, the orientation of the hexane molecule inside the material seems to favor either a configuration with a large LCD and a low PLD (QUXRUY), or a slightly lower LCD with a slightly higher PLD (QUXRIM). The material configurations are, however, a bit different from the ones observed with KXQOR or KAXQIL. 
 
 \begin{figure}[ht]
   \centering
@@ -175,7 +175,7 @@ This method could be used on other materials by screening for materials with a s
 
 \subsubsection{Diffusion in a flexible environment}
 
-The transport can also be modulated by the adsorbate-induced flexibility of SBMOF-1. Depending on the structural configuration of the material, the diffusion coefficient is limiting only for some configurations of the material: it is equal to $3\times10^{-8}$~\si{\square\cm\per\s} for KAXQIL and $1\times10^{-11}$~\si{\square\cm\per\s} for UQEFED (Table~\ref{table:sbmof}). This lower diffusion coefficient can be simply explained by the change in PLD value induced by the stretching illustrated on the Figure~\ref{fgr:stretch}. For a material mostly loaded by krypton molecules, the diffusion coefficient of xenon is much higher ($5\times10^{-6}$~\si{\square\cm\per\s}), although it not free diffusion, it can at least be considered as an unobstructed diffusion inside the material. 
+The transport can also be modulated by the adsorbate-induced flexibility of SBMOF-1. Depending on the structural configuration of the material, the diffusion coefficient is limiting only for some configurations of the material: it is equal to $3\times10^{-8}$~\si{\square\cm\per\s} for KAXQIL and $1\times10^{-11}$~\si{\square\cm\per\s} for UQEFED (Table~\ref{table:sbmof}). This lower diffusion coefficient can be simply explained by the change in PLD value induced by the stretching illustrated on Figure~\ref{fgr:stretch}. For a material mostly loaded by krypton molecules, the diffusion coefficient of xenon is much higher ($5\times10^{-6}$~\si{\square\cm\per\s}), although it not free diffusion, it can at least be considered as an unobstructed diffusion inside the material. 
 
 \begin{figure}[ht]
   \centering
@@ -183,7 +183,7 @@ The transport can also be modulated by the adsorbate-induced flexibility of SBMO
   \caption{ Visualization of the pore size stretching effect using the GrAED algorithm. The xenon increases the LCD value while diminishing the PLD value. }\label{fgr:stretch}
 \end{figure}
 
-Now that we identified two completely different diffusion behaviors, we can extrapolate these results to hypothetical conditions. For instance, if there is a relation between the quantity of xenon inside the pores and the structural similarity toward UQEFED, then the material could kinetically limit the adsorption of xenon at a high loading of xenon. In other words, it could be kinetically harder to adsorb xenon at higher xenon loadings. But at lower xenon loading, it also means that there is no diffusion limitations as is suggested by the very steep mass transfer zone on the breakthrough curve of xenon on the Figure~\ref{fgr:sbmof_breakthrough}. If we connect this result on the influence of flexibility on the transport properties to the one obtained on the adsorption process itself, the adsorption of xenon is also much more thermodynamically favorable at higher values of xenon loading. There seems to be a complex thermodynamics-kinetics trade-off as we articulated in the previous chapter since KAXQIL and UQEFED are structurally quite similar, but it occurs at higher partial pressure in xenon. At an industrial point of view, the inclusion of transport effects in the analysis highlights additional cost in adsorbing xenon at high loading values if this theoretical study is confirmed by experiments.
+Now that we identified two completely different diffusion behaviors, we can extrapolate these results to hypothetical conditions. For instance, if there is a relation between the quantity of xenon inside the pores and the structural similarity toward UQEFED, then the material could kinetically limit the adsorption of xenon at a high loading of xenon. In other words, it could be kinetically harder to adsorb xenon at higher xenon loadings. But at lower xenon loading, it also means that there is no diffusion limitations as is suggested by the very steep mass transfer zone on the breakthrough curve of xenon on Figure~\ref{fgr:sbmof_breakthrough}. If we connect this result on the influence of flexibility on the transport properties to the one obtained on the adsorption process itself, the adsorption of xenon is also much more thermodynamically favorable at higher values of xenon loading. There seems to be a complex thermodynamics-kinetics trade-off as we articulated in the previous chapter since KAXQIL and UQEFED are structurally quite similar, but it occurs at higher partial pressure in xenon. At an industrial point of view, the inclusion of transport effects in the analysis highlights additional cost in adsorbing xenon at high loading values if this theoretical study is confirmed by experiments.
 
 By using simple simulation methods (Widom insertion and MD) on rigid structures, I probed the effects of flexibility on both the adsorption and transport properties using experimentally resolved structures in different adsorption conditions. This study sheds light on the mystery around the experiment-theory discrepancies and opens up opportunities to understand similar problematic systems. In this study, I relied on the experimental data that was published on the SBMOF structure, the same resources are not always available for other systems and maybe an effort of data generation using either experiments or simulations should be performed in these cases. If generalized, this approach can even be automatically applied on a series of structures, opening up the possibility of ``flexibility-aware'' screenings in the future. Aware of the importance of both flexibility and transport effects, other studies have tried to incorporate both in a small-scale screening process.\autocite{Stanton_2022} The authors used a flexible forcefield MD simulations to determine the diffusion coefficient and DFT calculations at the adsorption site to assess the adsorption performance. The main issue of this method is its computational cost, but it can be an alternative solution to the one introduced here, when no prior knowledge is available on the structure’s flexibility. 
 
@@ -204,9 +204,9 @@ For this reason, it is necessary to develop a polarizable forcefield that includ
 \end{figure}
 
 If we consider the selectivity of good materials for xenon/krypton separation that are often presented in the literature, the materials named \ce{Co3(HCOO)6},\autocite{Wang_2014} CC3,\autocite{Chen_2014} SBMOF-2,\autocite{Chen_2015} CROFOUR-1-Ni,\autocite{Mohamed_2016}  SBMOF-1,\autocite{Banerjee_2016} \ce{Co3(C4O4)2(OH)2}\autocite{Li_2019} and ZJU-17a\autocite{Pei_2022} often appear as top separation materials.
-When comparing their selectivity values obtained by a Widom insertion with the UFF forcefield to the experimental values as shown on the Figure~\ref{fgr:exp_theory_discrepancy}, there is generally a good correlation, however, in some cases like SBMOF-1, other effects could explain the difference observed (see thr previous section on flexibility). In other cases, it is the polarization effect that was not taken into account and could in fact explain the difference. To better understand this phenomenon, I will describe the two papers that found record-breaking Xe/Kr selectivity values based on polar hydroxyl groups and open metal sites.
+When comparing their selectivity values obtained by a Widom insertion with the UFF forcefield to the experimental values as shown on Figure~\ref{fgr:exp_theory_discrepancy}, there is generally a good correlation, however, in some cases like SBMOF-1, other effects could explain the difference observed (see thr previous section on flexibility). In other cases, it is the polarization effect that was not taken into account and could in fact explain the difference. To better understand this phenomenon, I will describe the two papers that found record-breaking Xe/Kr selectivity values based on polar hydroxyl groups and open metal sites.
 
-The first paper of Li et al.\autocite{Li_2019} published in 2019 introduced a squarate-based MOF with a Xe/Kr selectivity of $69.7$ for a 20:80 binary mixture estimated by the ideal adsorbed solution theory (IAST)\autocite{Cessford_2012}. The authors explained this outstanding xenon affinity by two factors: a pore size close to the kinetic diameter of a xenon and the stabilization effect of the hydroxyl group. DFT calculations determined binding energies of the order of \SI{44.1}{\kJ\per\mole} for xenon and \SI{33.7}{\kJ\per\mole}, which suggests a separation process of enthalpic nature (usually the case for highly selective materials). Because of the high electronegativity of the oxygen atom, the hydroxyl group pointing to the pore center (as illustrated on the Figure~\ref{fgr:jacs_li_str}) interacts strongly with the xenon through a permanent dipole--induced dipole interaction (introduced in the section~\ref{sct:interaction}). This high xenon affinity is illustrated by the experimental isotherms of the Figure~\ref{fgr:jacs_li_isotherm}. On the other hand, the pore wall creates unidimensional channels that present adsorption pores with a \SI{4.1}{\angstrom}$\times$\SI{4.3}{\angstrom} size, which is very close to the xenon kinetic diameter of about \SI{4.0}{\angstrom}. 
+The first paper of Li et al.\autocite{Li_2019} published in 2019 introduced a squarate-based MOF with a Xe/Kr selectivity of $69.7$ for a 20:80 binary mixture estimated by the ideal adsorbed solution theory (IAST)\autocite{Cessford_2012}. The authors explained this outstanding xenon affinity by two factors: a pore size close to the kinetic diameter of a xenon and the stabilization effect of the hydroxyl group. DFT calculations determined binding energies of the order of \SI{44.1}{\kJ\per\mole} for xenon and \SI{33.7}{\kJ\per\mole}, which suggests a separation process of enthalpic nature (usually the case for highly selective materials). Because of the high electronegativity of the oxygen atom, the hydroxyl group pointing to the pore center (as illustrated on Figure~\ref{fgr:jacs_li_str}) interacts strongly with the xenon through a permanent dipole--induced dipole interaction (introduced in the section~\ref{sct:interaction}). This high xenon affinity is illustrated by the experimental isotherms of the Figure~\ref{fgr:jacs_li_isotherm}. On the other hand, the pore wall creates unidimensional channels that present adsorption pores with a \SI{4.1}{\angstrom}$\times$\SI{4.3}{\angstrom} size, which is very close to the xenon kinetic diameter of about \SI{4.0}{\angstrom}. 
 
 \begin{figure}[ht]
   \centering
@@ -230,9 +230,9 @@ The first paper of Li et al.\autocite{Li_2019} published in 2019 introduced a sq
   \caption{ (a) Representation of the squarate-MOF \ce{Ce3(C4O4)2(OH)2} structure with the color code: brown for C, white for H, red for O, pink for Co. We can see the hydroxyl group to which the authors attribute the high Xe/Kr selectivity. (b) Mono-component adsorption isotherm measured experimentally for Xe, Kr, Ar, \ce{N2} and \ce{O2}. (c) Experimental breakthrough curves for a gas mixture with 400 ppm Xe and 40 ppm Kr balanced with dry air. Reprinted with permission from Ref.~\cite{Li_2019} copyright \copyright\ 2019 American Chemical Society. }\label{fgr:jacs_li}
 \end{figure}
 
-Finally, if we look at the breakthrough experiment data (on the Figure~\ref{fgr:jacs_li_breakthrough}), we observe a rather slow release of xenon in the mass transfer zone, which suggests a rather low xenon diffusion coefficient in this material.It seems that the diffusion limitation occurs even at very low xenon partial pressure (400 ppm) in this material. This was not the case for SBMOF-1, as the xenon breakthrough curve was much steeper (rapid mass transfer) as shown on the Figure~\ref{fgr:sbmof_breakthrough}. To have a closer look at the transport effect in this squarate-MOF, we should carry out similar simulations as for SBMOF-1 with a polarizable forcefield. 
+Finally, if we look at the breakthrough experiment data (on Figure~\ref{fgr:jacs_li_breakthrough}), we observe a rather slow release of xenon in the mass transfer zone, which suggests a rather low xenon diffusion coefficient in this material.It seems that the diffusion limitation occurs even at very low xenon partial pressure (400 ppm) in this material. This was not the case for SBMOF-1, as the xenon breakthrough curve was much steeper (rapid mass transfer) as shown on Figure~\ref{fgr:sbmof_breakthrough}. To have a closer look at the transport effect in this squarate-MOF, we should carry out similar simulations as for SBMOF-1 with a polarizable forcefield. 
 
-In the second work,\autocite{Pei_2022} Pei et al. introduced two Hofmann-type MOFs with record-breaking Xe/Kr selectivity values. The first Co/Ni-based MOF, called ZJU-74a-Ni, has an estimated IAST selectivity of $74.1$ for a Xe/Kr binary mixture of composition 20:80 at \SI{1}{\bar} and \SI{298}{\kelvin}, while the second Co/Pd-biased MOF, ZJU-74a-Pd, displays a selectivity of $103.4$ in the same ambient-pressure conditions. As shown on the Figure~\ref{fgr:jacs_pei_iast}, the IAST selectivity of ZJU-74a-Pd is not always that high and can decrease to $30$ at very low-pressure conditions. The authors attribute the record-breaking selectivity values of these materials by a size close to the kinetic diameter of Xe and above all the increased interaction with the open metal site either be it the nickel or the palladium atoms. The Horvath–Kawazoe method gave a pore size of \SI{4.0}{\angstrom} and \SI{3.8}{\angstrom} for respectively the Ni and Pd-based MOFs. And the xenon binding energy was evaluated to be around \SI{38}{\kJ\per\mole} for ZJU-74a-Ni using a UFF-based method. We can note that this value is much lower than the one obtained for the squarate-based MOF. Since the experimental performance is much higher, this is probably due to the level of theory they employed probably to save time. This material needs to be tested with either a DFT method in order to find the real binding energy. 
+In the second work,\autocite{Pei_2022} Pei et al. introduced two Hofmann-type MOFs with record-breaking Xe/Kr selectivity values. The first Co/Ni-based MOF, called ZJU-74a-Ni, has an estimated IAST selectivity of $74.1$ for a Xe/Kr binary mixture of composition 20:80 at \SI{1}{\bar} and \SI{298}{\kelvin}, while the second Co/Pd-biased MOF, ZJU-74a-Pd, displays a selectivity of $103.4$ in the same ambient-pressure conditions. As shown on Figure~\ref{fgr:jacs_pei_iast}, the IAST selectivity of ZJU-74a-Pd is not always that high and can decrease to $30$ at very low-pressure conditions. The authors attribute the record-breaking selectivity values of these materials by a size close to the kinetic diameter of Xe and above all the increased interaction with the open metal site either be it the nickel or the palladium atoms. The Horvath–Kawazoe method gave a pore size of \SI{4.0}{\angstrom} and \SI{3.8}{\angstrom} for respectively the Ni and Pd-based MOFs. And the xenon binding energy was evaluated to be around \SI{38}{\kJ\per\mole} for ZJU-74a-Ni using a UFF-based method. We can note that this value is much lower than the one obtained for the squarate-based MOF. Since the experimental performance is much higher, this is probably due to the level of theory they employed probably to save time. This material needs to be tested with either a DFT method in order to find the real binding energy. 
 
 \begin{figure}[ht]
   \centering
