--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -3,7 +3,8 @@
 
 \chapter*{General conclusions}
 
-In this thesis, I explored different techniques to estimate
+In this thesis, I studied nanoporous materials for xenon/krypton separation for their many applications in the industry. \todo{Give the } 
+I explored different techniques to estimate the 
 
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{88}
